Spitzer: Report Opus in Ogg as supported by unified pipeline

BUG=598888
TEST=MediaCanPlayTypeTest.CodecSupportTest_ogg after switching the the default Android media pipleine to the unified pipeline and updating kOggOpusProbably to "probably".

Review URL: https://codereview.chromium.org/1842993002

Cr-Commit-Position: refs/heads/master@{#383919}

Former-commit-id: 65c03640c4f3e32b1ddeca63bc8503beda45d482